# services/api/internal/api/server.gen.go
@@ -3387,6 +3387,20 @@ func (response CreateBreakReason400JSONResponse) VisitCreateBreakReasonResponse(
 	return err
 }
 
+type CreateBreakReason409JSONResponse ErrorResponse
+
+func (response CreateBreakReason409JSONResponse) VisitCreateBreakReasonResponse(w http.ResponseWriter) error {
+
+	var buf bytes.Buffer
+	if err := json.NewEncoder(&buf).Encode(response); err != nil {
+		return err
+	}
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(409)
+	_, err := buf.WriteTo(w)
+	return err
+}
+
 type CreateBreakReason500JSONResponse struct {
 	InternalServerErrorJSONResponse
 }
